src/scss/04_components/_navbar.scss
body.alumni .subheader .navbar .nav {
  position: absolute;
  top: 100%;
  left: 50%;
  width: calc(100% - 134px);
  max-width: 306px;
  min-width: 250px;
  
  margin-right: 0;
  
  background: $c_fog;
  transform: translateX(-50%);
  
  @media (min-width: 30em) {
    left: auto;
    right: -$sp_base * .5;
    transform: translateX(0);
  }
  
  @media (min-width: 48em) {
    max-width: initial;
    margin-right: 10px;
    position: static;
    display: block;
    width: auto;
    height: auto;
    overflow: initial;
    
    background: transparent;
  }
}

body.alumni .subheader .navbar .nav > li {
  display: block;
  float: none;
  
  margin-bottom: 0;
  
  @media (min-width: 48em) {
    display: list-item;
    float: left;
    
    margin-left: $sp_base * .68;
    padding-top: $sp_base * .32;
  }
  
  @media (min-width: 49em) {
    margin-left: $sp_base * .8;
  }
}

  body.alumni .subheader .navbar .nav>li>a {
    padding: $sp_base * .32 0;
    
    border-bottom: 1px solid $c_white;
    color: $c_navy;
    font-size: 19px;
    font-family: $fontfamily_headers;
    font-weight: bold;
    text-shadow: none;
    
    @media (min-width: 30em) {
      margin-left: $sp_base * .4;
      padding: $sp_base * .32 0 $sp_base * .32 $sp_base * .28;
    }
    
    @media (min-width: 48em) {
      margin-left: 0;
      padding: 0;
      
      border-bottom-width: 0;
    }
  }
    body.alumni .subheader .navbar .nav>.active>a,
    body.alumni .subheader .navbar .nav>.active>a:hover,
    body.alumni .subheader .navbar .nav>.active>a:focus {
      margin-left: 0;
      
      background: $c_gold;
      -webkit-box-shadow: none;
      box-shadow: none;
      color: $c_white;
      
      @media (min-width: 30em) {
        padding-left: $sp_base * .68;
      }
      
      @media (min-width: 48em) {
        padding-left: 0;
        background: transparent;
        color: currentColor;
        position: relative;
      }
    }
    
    body.alumni .subheader .navbar .nav li.dropdown.open>.dropdown-toggle,
    body.alumni .subheader .navbar .nav li.dropdown.active>.dropdown-toggle,
    body.alumni .subheader .navbar .nav li.dropdown.open.active>.dropdown-toggle {
      margin-left: 0;
      
      
      background: $c_blue;
      border-bottom-width: 0;
      color: $c_white;
      
      @media (min-width: 30em) {
        padding-left: $sp_base * .68;
      }
      
      @media (min-width: 48em) {
        padding-left: 0;
        background: transparent;
        color: currentColor;
      }
    }
    
    @media (min-width: 48em) {
      body.alumni .subheader .navbar .nav>.active>a::after,
      body.alumni .subheader .navbar .nav>.active>a:hover::after,
      body.alumni .subheader .navbar .nav>.active>a:focus::after {
        content: '';
        
        position: absolute;
        bottom: -1px;
        left: -2px;
        height: 2px;
        width: calc(100% + 4px);
        
        background: $c_gold;
      }
    }
      
      
body.alumni .subheader .btn-navbar {
  display: inline-block;
  margin-right: 0;
  padding: $sp_base * .25 $sp_base * .5 $sp_base * .15 $sp_base * .25;
  position: relative;
  
  background: none;
  border: none;
  box-shadow: none;
  color: $c_black;
  float: none;
  font-size: 130%;
  text-shadow: none;
  
  @media (min-width: 30em) {
    display: block;
    float: right;
  }
  
  &::after {
    content: '';
    position: absolute;
    right: 0;
    top: 64%;
    
    height: 0;
    width: 0;
    
    border: 1px solid $c_black;
    border-width: 6px 5px;
    border-color: $c_black transparent transparent;
    
    transform: translateY(-50%);
    transition: transform .2s ease;
  }
}

body.alumni .subheader .navCollapse.in + .btn-navbar::after {
  transform: translateY(-100%) rotate(180deg);
}

